Remove equal button class

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             
             <button id = "zero" class = "number-btn">0</button>
             <button id = "dot">.</button>
-            <button id = "equal" class = "operation-btn">=</button>
+            <button id = "equal">=</button>
             
         </div>
     </div>    
